# BrainCard

./: .gitignore  LICENSE  README.md  app.py
backend/: .pdm-python  Dockerfile  app.py  gunicorn.py  pyproject.toml  supervisor.ini
backend/static/css/: form.css
backend/static/js/: card.js  utils.js
backend/templates/: index.html
backend/utils/: __init__.py
backend/viewModels/: __init__.py
docs/: api.md  change_log.md  workflow.md
templates/: index.html
utils/: __init__.py
